5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1708_3063.log
== TEST (2019-04-29 14:22:24) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
if(A==200) or (A==30*d-20)
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:39) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
if(A==200) and (A==30*d-20)
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:26:46) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
if(B=="inteira") and (A>=200):
	elif()
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:01) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
e=30 * d - 20
print(e)
elif(B=="inteira") and (A >50 and <90):
	
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:02) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
e=30 * d - 20
print(e)
elif(B=="inteira") and (A >50 and <90):
	e=15 * d - 1
	print(e)
elif(B="placa")
	
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:40) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
e=30 * d - 20
print(e)
elif(B=="inteira") and (A<=200):
	e=15 * d - 1
	print(e)
elif(B="placa") and 
	e=20*d-18
	print(e)
elif(B=="malha")
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:12) 
-- CODE:
A=float(input"Precos das pecas de ouro")
B=input("armadura")
C=int(input("Fator de destreza"))
d=int(input("valor sorteado"))
e=30 * d - 20
print(e)
elif(B=="inteira") and (A<=200):
	e=15 * d - 1
	print(e)
elif(B="placa") and 
	e=20*d-18
	print(e)
elif(B=="malha") and
	e=15*d-1
	print(e)
elif(d>8)and(d<1):
	print("entrada invalida")
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 1
    A=float(input"Precos das pecas de ouro")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
